<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sesiones.MainActivity"
    android:background="@color/green"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logosuper"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreempresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nombre"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:fontFamily="@font/perfectbomber"/>

        <LinearLayout
            android:id="@+id/linearsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/correo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/recuperar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="lanzarRecuperar"
                android:text="@string/recontrasena"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/iniciosesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:onClick="comprobarSesion"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="lanzarRegistro"
                    android:text="@string/signin" />

            </LinearLayout>



        </LinearLayout>



    </LinearLayout>

</LinearLayout>